# fuel-devops

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .pylintrc_gerrit  CONTRIBUTING.rst  MAINTAINERS  README.md  migration_2.0-2.1  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
devops/: __init__.py  clf.py  cli.py  client.py  decorators.py  error.py  log.yaml  manager.py  models.py  settings.py  shell.py  test_settings.py  version.py
devops/client/: __init__.py  client.py  environment.py  nailgun.py
devops/common/: proboscis.py
devops/driver/: __init__.py
devops/helpers/: __init__.py  _subprocess_runner.py  cloud_image_settings.py  decorators.py  exec_result.py  helpers.py  lazy.py  loader.py  log_templates.py  metaclasses.py  network.py  node_manager.py  ntp.py  proc_enums.py  retry.py  scancodes.py  ssh_client.py  subprocess_runner.py  template_validator.py  templates.py  xmlbuilder.py  xmlgenerator.py
devops/migrations/: 0001_initial.py  0002_add_field_created.py  0002_bridge_support.py  0003_add_field_enable_bootmenu.py  0003_net_and_node.py  0003_refactoring.py
devops/models/: __init__.py  base.py  driver.py  environment.py  group.py  network.py  node.py  volume.py
devops/templates/: 10-nodes-3-disks-kvm-fuel-iso.yaml  10-nodes-kvm-fuel-iso.yaml  10-nodes-kvm-fuel-usb.yaml  read.me  (+7 more)
docs/: Makefile
migrations/: readme.md
samples/: baremetal_one.py  block-traffic.py  cdrom.py  devenv.py  install_admin.py  node_ip_address_integration.py  one-bridget-network.py  one.py  run.py
src/: devops.py  dos.py  manage.py
(+169 files in other folders)
