[metadata]
name = fuel-devops
description = Library for creating and manipulating virtual environments
author = Openstack
author_email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/fuel-docs/latest/
keywords = 
    devops
    virtual
    environment

[files]
packages =
    devops
data_files = 
    bin = bin/dos_functions.sh

[extra]
postgre =
    psycopg2

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
